--- a/index.css
+++ b/index.css
@@ -1,125 +1,103 @@
 body {
+    font-family: Tahoma;
+    font-size: 20px;
+    line-height: 1.6;
+    margin: 0px;
+    padding: 10px;
+    background-color: #f2f2f2;
+    color: #333;
+}
+
+/* Media query for smaller screens */
+@media screen and (max-width: 768px) {
+    body {
+        font-size: 14px;
+        /* Adjust font size for smaller screens */
+    }
+    
+    .icon {
+        width: 25px;
+    }
+}
+
+/* Media query for even smaller screens */
+@media screen and (max-width: 480px) {
+    body {
+        font-size: 12px;
+        /* Adjust font size for even smaller screens */
+    }
+
+    .icon {
+        width: 20px;
+    }
+}
+
+.container {
+    max-width: 900px;
     margin: 0 auto;
-    width: 90%;
-    background-color: rgb(252, 250, 250);
+    padding: 50px;
+    background-color: #fff;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    /* Added box shadow for depth */
 }
 
-h2, h3, h4 {
-    margin: 0;
-}
-
-h4 {
-    padding: 15px;
-}
-
-.svg {
-    margin-top: 20px;
-}
-
-.link {
-    text-decoration: none;
-    color: rgb(25, 0, 255);
-    font-weight: 600;
-}
-
-.divbar {
-    color: rgb(4, 4, 4);
-    font-size: 2em;
-}
-
-#logo {
-    float: left;
-    margin-top: 40px;
-    margin-bottom: 150px;
-    width: 40%;
-}
-
-#mern {
-    float: right;
-    margin-top: 100px;
-    width: 35%;
-}
-
-#mongo {
-    width: 35%;
-    margin-right: 10px;
-    float: left;
-    clear: both;
-}
-
-.desc {
-    margin-top: 50px;
-    margin-bottom: 50px;
-    float: right;
-    width: 60%;
-}
-
-.purpose {
-    margin-top: 40px;
-    float: left;
-    width: 60%;
-}
-
-.objective {
-    float: left;
-    width: 60%;
-}
-
-.credits {
-    float: right;
-    margin-top: 40px;
+.hero {
+    max-width: 1000px;
     width: 50%;
-    font-size: 2em;    
+    margin-bottom: 20px;
 }
 
-.snippet {
-    margin-top: 70px;
-    width: 45%;
-    float: left;
-}
-
-.duration {
-    margin-top: 20px;
-    float: left;
-    width: 95%;
-    font-size: 2em;
-}
-
-.middle {
-    margin-top: 20px;
-    float: left;
-    width: 95%;
-    font-size: 2em;
-}
-
-.dependencies {
-    justify-items: center;
-    align-items: center;
-    margin: 0 auto;
-    width: 100%;
-}
-
-.terminal {
-    float: right;
-    width: 20%;
-}
-
-.image-group {
-    float: left;
-    width: 50%;
-    margin: 20px 0px 0 0px
-}
-
-.productimage-group {
-    float: right;
-}
-
-.exp-node {
-    float: right;
+h1,
+h2,
+h3 {
+    color: #0056b3;
+    margin-bottom: 10px;
 }
 
 .icon {
-    width: 85px;
-    float: left;
-    margin-top: 20px;
+    margin: 0 10px;
+}
+
+p {
+    line-height: 1.6;
+}
+
+ul {
+    list-style-type: disc;
+    line-height: 1.6;
+    padding-left: 20px;
+}
+
+h1 {
+    margin-bottom: 20px;
+}
+
+/* Step section*/
+h2 {
+    margin-top: 40px;
+}
+
+ul {
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+ul li {
+    margin-bottom: 10px;
+}
+
+/* Conclusion section*/
+h2:last-child {
+    margin-bottom: 20px;
+}
+
+/* Aesthetics section*/
+h2:nth-last-child(2) {
+    margin-bottom: 20px;
+}
+
+.main {
+    display: flex;
+    justify-content: center;
 }
